# restful-af-sv/src/main/java/org/example/restful/adapter/rest/v1/controller/InvestorControllerImpl.java
@@ -3,25 +3,21 @@ package org.example.restful.adapter.rest.v1.controller;
 import org.example.restful.adapter.rest.HateoasUtils;
 import org.example.restful.adapter.rest.v1.converter.InvestorRequestToInvestorConverter;
 import org.example.restful.adapter.rest.v1.converter.InvestorToInvestorResponseConverter;
+import org.example.restful.configuration.CacheTTL;
 import org.example.restful.domain.Investor;
-import org.example.restful.port.rest.v1.InvestorController;
-import org.example.restful.port.rest.v1.api.model.InvestorRequest;
-import org.example.restful.port.rest.v1.api.model.InvestorResponse;
 import org.example.restful.service.InvestorService;
+import org.openapitools.api.InvestorsApi;
+import org.openapitools.model.InvestorRequest;
+import org.openapitools.model.InvestorResponse;
+import org.openapitools.model.InvestorResponsePage;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.hateoas.server.mvc.WebMvcLinkBuilder;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.util.UriComponentsBuilder;
@@ -30,17 +26,16 @@ import java.time.Instant;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 import javax.annotation.security.RolesAllowed;
-import javax.validation.Valid;
 
 import lombok.extern.slf4j.Slf4j;
 
 import static org.example.restful.constant.Roles.ADMIN;
 import static org.example.restful.constant.Roles.USER;
-import static org.example.restful.constant.UrlConstants.BASE_PATH_V1;
 import static org.example.restful.constant.UrlConstants.BASE_PATH_V2;
-import static org.example.restful.constant.UrlConstants.ID_PATH_PARAM;
 import static org.example.restful.constant.UrlConstants.INVESTORS_SUBPATH;
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
@@ -50,9 +45,9 @@ import static org.springframework.web.bind.annotation.RequestMethod.PUT;
 
 @Slf4j
 @RestController
-@RequestMapping(BASE_PATH_V1)
-public class InvestorControllerImpl extends HateoasUtils<InvestorResponse>
-    implements InvestorController {
+public class InvestorControllerImpl extends HateoasUtils implements InvestorsApi {
+
+  @Autowired protected CacheTTL cacheTTL;
 
   @Autowired private InvestorService investorService;
 
@@ -62,16 +57,13 @@ public class InvestorControllerImpl extends HateoasUtils<InvestorResponse>
   @Override
   @RolesAllowed({USER, ADMIN})
   @Cacheable(value = "investor")
-  @GetMapping(
-      value = INVESTORS_SUBPATH + ID_PATH_PARAM,
-      produces = {MediaType.APPLICATION_JSON_VALUE, MediaType.APPLICATION_XML_VALUE})
-  public ResponseEntity<InvestorResponse> getInvestor(@PathVariable final Long id) {
+  public ResponseEntity<InvestorResponse> getInvestorById(final Long id) {
     log.info("Getting investor {}", id);
 
     final InvestorResponse response =
         responseConverter.convert(investorService.getInvestorById(id));
-
-    applyHATEOAS(response, getHateoasMap(response, List.of(PUT, DELETE)));
+    response.setLinks(
+        responseConverter.convertLinks(getHateoasMap(response, List.of(PUT, DELETE))));
 
     return ResponseEntity.ok().lastModified(Instant.now()).body(response);
   }
@@ -79,8 +71,7 @@ public class InvestorControllerImpl extends HateoasUtils<InvestorResponse>
   @Override
   @Deprecated
   @RolesAllowed(ADMIN)
-  @GetMapping(value = INVESTORS_SUBPATH)
-  public ResponseEntity<List<InvestorResponse>> getAllInvestors() {
+  public ResponseEntity<Void> getInvestors() {
     log.info("Getting all investors");
     return ResponseEntity.status(HttpStatus.PERMANENT_REDIRECT)
         .location(
@@ -93,34 +84,57 @@ public class InvestorControllerImpl extends HateoasUtils<InvestorResponse>
   }
 
   @Override
+  @SuppressWarnings("unchecked")
+  @RolesAllowed(ADMIN)
+  public ResponseEntity<InvestorResponsePage> getInvestorsV2(
+      final Long offset, final Integer limit) {
+
+    final Optional<Long> optOffset = Optional.ofNullable(offset);
+    final Optional<Integer> optLimit = Optional.ofNullable(limit);
+
+    final Pageable pageable = getPageable(optOffset, optLimit);
+
+    final Page<Investor> resultPage = investorService.getAllInvestors(pageable);
+
+    return ResponseEntity.status(calculateStatus(resultPage))
+        .body(
+            InvestorResponsePage.builder()
+                .data(
+                    resultPage.map(responseConverter::convert).stream()
+                        .collect(Collectors.toList()))
+                .pagination(
+                    getPagination(
+                        optOffset.orElse(PAGINATION_DEFAULT_OFFSET),
+                        optLimit.orElse(PAGINATION_DEFAULT_LIMIT),
+                        resultPage.getTotalElements()))
+                .build());
+  }
+
+  private HttpStatus calculateStatus(final Page<Investor> resultPage) {
+    return resultPage.getTotalElements() > resultPage.getSize()
+        ? HttpStatus.PARTIAL_CONTENT
+        : HttpStatus.OK;
+  }
+
+  @Override
   @RolesAllowed({USER, ADMIN})
-  @PostMapping(
-      value = INVESTORS_SUBPATH,
-      consumes = MediaType.APPLICATION_JSON_VALUE,
-      produces = MediaType.APPLICATION_JSON_VALUE)
-  public ResponseEntity<InvestorResponse> createInvestor(
-      @Valid @RequestBody final InvestorRequest investorRequest) throws Exception {
+  public ResponseEntity<InvestorResponse> createInvestor(final InvestorRequest investorRequest) {
     log.info("Creating investor {}", investorRequest.getIdNumber());
 
     final Investor investor =
         investorService.createInvestor(requestConverter.convert(investorRequest));
 
     final InvestorResponse response = responseConverter.convert(investor);
-
-    applyHATEOAS(response, getHateoasMap(response, List.of(GET, PUT, DELETE)));
+    response.setLinks(
+        responseConverter.convertLinks(getHateoasMap(response, List.of(GET, PUT, DELETE))));
 
     return ResponseEntity.status(HttpStatus.CREATED).body(response);
   }
 
-  @SuppressWarnings("rawtypes")
   @Override
   @RolesAllowed({USER, ADMIN})
   @CacheEvict(value = "investor", key = "#id")
-  @PutMapping(
-      value = INVESTORS_SUBPATH + ID_PATH_PARAM,
-      consumes = MediaType.APPLICATION_JSON_VALUE)
-  public ResponseEntity updateInvestor(
-      @PathVariable final Long id, @RequestBody final InvestorRequest investorRequest) {
+  public ResponseEntity<Void> updateInvestor(final Long id, final InvestorRequest investorRequest) {
     log.info("Updating investor {}", id);
 
     investorService.updateInvestor(id, requestConverter.convert(investorRequest));
@@ -128,14 +142,10 @@ public class InvestorControllerImpl extends HateoasUtils<InvestorResponse>
     return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
   }
 
-  @SuppressWarnings("rawtypes")
   @Override
   @RolesAllowed({USER, ADMIN})
   @CacheEvict(value = "investor", key = "#id")
-  @DeleteMapping(
-      value = INVESTORS_SUBPATH + ID_PATH_PARAM,
-      produces = MediaType.APPLICATION_JSON_VALUE)
-  public ResponseEntity deleteInvestor(@PathVariable final Long id) {
+  public ResponseEntity<Void> deleteInvestor(final Long id) {
     log.info("Deleting investor {}", id);
 
     investorService.deleteInvestor(id);
@@ -150,17 +160,20 @@ public class InvestorControllerImpl extends HateoasUtils<InvestorResponse>
         new HashMap<RequestMethod, WebMvcLinkBuilder>();
 
     if (includedLinks.contains(RequestMethod.GET)) {
-      hateoasMap.put(GET, linkTo(methodOn(this.getClass()).getInvestor(response.getId())));
+      hateoasMap.put(
+          GET, linkTo(methodOn(this.getClass()).getInvestorById(response.getId().longValue())));
     }
     if (includedLinks.contains(RequestMethod.PUT)) {
       hateoasMap.put(
           PUT,
           linkTo(
               methodOn(this.getClass())
-                  .updateInvestor(response.getId(), InvestorRequest.builder().build())));
+                  .updateInvestor(
+                      response.getId().longValue(), InvestorRequest.builder().build())));
     }
     if (includedLinks.contains(RequestMethod.DELETE)) {
-      hateoasMap.put(DELETE, linkTo(methodOn(this.getClass()).deleteInvestor(response.getId())));
+      hateoasMap.put(
+          DELETE, linkTo(methodOn(this.getClass()).deleteInvestor(response.getId().longValue())));
     }
 
     return hateoasMap;
