# restful-af-sv/src/main/java/org/example/restful/port/rest/v1/InvestorController.java
@@ -1,146 +1,0 @@
-package org.example.restful.port.rest.v1;
-
-import org.example.restful.port.rest.v1.api.model.InvestorRequest;
-import org.example.restful.port.rest.v1.api.model.InvestorResponse;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
-
-import java.util.List;
-
-import io.swagger.v3.oas.annotations.OpenAPIDefinition;
-import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.Parameter;
-import io.swagger.v3.oas.annotations.headers.Header;
-import io.swagger.v3.oas.annotations.media.Content;
-import io.swagger.v3.oas.annotations.media.Schema;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.responses.ApiResponses;
-import io.swagger.v3.oas.annotations.tags.Tag;
-
-@OpenAPIDefinition
-@Tag(name = "Investor API", description = "Endpoints for investor operations")
-public interface InvestorController {
-  @Operation(summary = "Returns an investor as per identification number")
-  @ApiResponses(
-      value = {
-        @ApiResponse(
-            responseCode = "200",
-            description = "Success",
-            content = {
-              @Content(
-                  mediaType = MediaType.APPLICATION_JSON_VALUE,
-                  schema = @Schema(implementation = InvestorResponse.class)),
-              @Content(
-                  mediaType = MediaType.APPLICATION_XML_VALUE,
-                  schema = @Schema(implementation = InvestorResponse.class))
-            }),
-        @ApiResponse(
-            responseCode = "400",
-            description = "Bad request",
-            content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE)),
-        @ApiResponse(
-            responseCode = "401",
-            description = "Unauthorized",
-            content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE)),
-        @ApiResponse(
-            responseCode = "404",
-            description = "Investor not found",
-            content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE)),
-        @ApiResponse(responseCode = "406", description = "Not acceptable"),
-        @ApiResponse(
-            responseCode = "500",
-            description = "Server Error",
-            content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE))
-      })
-  ResponseEntity<InvestorResponse> getInvestor(
-      @Parameter(description = "Identification", example = "12345") Long id);
-
-  @Operation(summary = "Returns all investors", deprecated = true)
-  @ApiResponses(
-      value = {
-        @ApiResponse(
-            responseCode = "301",
-            description = "Permanent redirect",
-            content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE),
-            headers = @Header(name = "location", description = "Redirected URI")),
-        @ApiResponse(
-            responseCode = "401",
-            description = "Unauthorized",
-            content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE))
-      })
-  ResponseEntity<List<InvestorResponse>> getAllInvestors();
-
-  @Operation(summary = "Create a new investor")
-  @ApiResponses(
-      value = {
-        @ApiResponse(
-            responseCode = "201",
-            description = "Created",
-            content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE),
-            headers = @Header(name = "location", description = "How to get the investor")),
-        @ApiResponse(
-            responseCode = "400",
-            description = "Bad request",
-            content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE)),
-        @ApiResponse(
-            responseCode = "401",
-            description = "Unauthorized",
-            content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE)),
-        @ApiResponse(
-            responseCode = "500",
-            description = "Server Error",
-            content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE))
-      })
-  ResponseEntity<InvestorResponse> createInvestor(InvestorRequest investorRequest) throws Exception;
-
-  @SuppressWarnings("rawtypes")
-  @Operation(summary = "Update an investor")
-  @ApiResponses(
-      value = {
-        @ApiResponse(
-            responseCode = "204",
-            description = "No content",
-            content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE)),
-        @ApiResponse(
-            responseCode = "400",
-            description = "Bad request",
-            content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE)),
-        @ApiResponse(
-            responseCode = "401",
-            description = "Unauthorized",
-            content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE)),
-        @ApiResponse(
-            responseCode = "404",
-            description = "Investor not found",
-            content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE)),
-        @ApiResponse(
-            responseCode = "500",
-            description = "Server Error",
-            content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE))
-      })
-  ResponseEntity updateInvestor(Long id, InvestorRequest investorRequest);
-
-  @SuppressWarnings("rawtypes")
-  @Operation(summary = "Delete an investor")
-  @ApiResponses(
-      value = {
-        @ApiResponse(
-            responseCode = "204",
-            description = "No content",
-            content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE)),
-        @ApiResponse(
-            responseCode = "400",
-            description = "Bad request",
-            content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE)),
-        @ApiResponse(
-            responseCode = "401",
-            description = "Unauthorized",
-            content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE)),
-        @ApiResponse(
-            responseCode = "500",
-            description = "Server Error",
-            content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE))
-      })
-  ResponseEntity deleteInvestor(
-      @Parameter(description = "Identification", example = "12345") Long id);
-}
