# restful-af-sv/src/main/java/org/example/restful/port/rest/v2/api/model/Links.java
@@ -1,17 +1,0 @@
-package org.example.restful.port.rest.v2.api.model;
-
-import lombok.Builder;
-import lombok.Data;
-
-@Data
-@Builder
-public class Links {
-
-  private String self;
-
-  private String prev;
-
-  private String next;
-
-  private String first;
-}
