# restful-af-sv/src/main/java/org/example/restful/port/rest/v2/api/model/PaginationLinks.java
@@ -1,17 +1,0 @@
-package org.example.restful.port.rest.v2.api.model;
-
-import lombok.Builder;
-import lombok.Data;
-
-@Data
-@Builder
-public class PaginationLinks {
-
-  private Integer limit;
-
-  private Long offset;
-
-  private Long total;
-
-  private Links _links;
-}
